--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
       box-sizing: border-box;
       }
       button {
-      background-color: #8ebf42;
+      background-color: #9954b4;
       color: white;
       padding: 14px 0;
       margin: 10px 0;
