--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -75,9 +75,9 @@
       <div class="formcontainer">
       <hr/>
       <div class="container">
-        <label for="uname"><strong>Username</strong></label>
+        <label for="username"><strong>Username</strong></label>
         <input type="text" placeholder="Enter Username" name="username" required>
-        <label for="psw"><strong>Password</strong></label>
+        <label for="password"><strong>Password</strong></label>
         <input type="password" placeholder="Enter Password" name="password" required>
       </div>
       <button type="submit">Login</button>
