Added values for radiobuttons

--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -156,23 +156,23 @@
         <div class="grade-type">
           <h3>Rate Our Website</h3>
           <div> 
-            <input type="radio" value="none" id="radioOne" name="grade" th:field="*{option}" checked/>
+            <input type="radio" value="Excellent" id="radioOne" name="grade" th:field="*{option}" checked/>
             <label for="radioOne" class="radio">Excellent</label>
           </div>
           <div>
-            <input type="radio" value="none" id="radioTwo" name="grade" th:field="*{option}" />
+            <input type="radio" value="Very Good" id="radioTwo" name="grade" th:field="*{option}" />
             <label for="radioTwo" class="radio">Very Good</label>
           </div>
           <div>
-            <input type="radio" value="none" id="radioThree" name="grade" th:field="*{option}" />
+            <input type="radio" value="Good" id="radioThree" name="grade" th:field="*{option}" />
             <label for="radioThree" class="radio">Good</label>
           </div>
           <div>
-            <input type="radio" value="none" id="radioFour" name="grade" th:field="*{option}" />
+            <input type="radio" value="Bad" id="radioFour" name="grade" th:field="*{option}" />
             <label for="radioFour" class="radio">Bad</label>
           </div>
           <div>
-            <input type="radio" value="none" id="radioFive" name="grade" th:field="*{option}" />
+            <input type="radio" value="Very Bad" id="radioFive" name="grade" th:field="*{option}" />
             <label for="radioFive" class="radio">Very Bad</label>
           </div>
         </div>
