--- a/src/main/resources/templates/ratings.html
+++ b/src/main/resources/templates/ratings.html
@@ -1,17 +1,29 @@
-<!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Getting Started: Handling Form Submission</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>JSON Test</title>
 </head>
 <body>
-	<h1>Result</h1>
-    <p th:text="'Name: ' +  " />
-    <p th:text="'Age: ' +" />
-    <p th:text="'Email: ' + " />
-    <p th:text="'Phone: ' +" />
-    <p th:text="'Option: ' + " />
-    <a href="/rating">Submit another message</a>
-    
+    <div id="myData"></div>
+    <script>
+        fetch('https://blooming-earth-43684.herokuapp.com/all')
+            .then(function (data) {
+                appendData(data);
+            })
+            .catch(function (err) {
+                console.log('error: ' + err);
+            });
+        function appendData(data) {
+            var mainContainer = document.getElementById("myData");
+            for (var i = 0; i < data.length; i++) {
+                var div = document.createElement("div");
+                div.innerHTML = data[i].name + ' ' + data[i].age + ' ' +data[i].email + ' ' +data[i].phone;
+                mainContainer.appendChild(div);
+            }
+        }
+    </script>
 </body>
 </html>
