--- a/src/main/resources/templates/ratings.html
+++ b/src/main/resources/templates/ratings.html
@@ -7,6 +7,7 @@
     <title>JSON Test</title>
 </head>
 <body>
+    <div> BLAAAAAAAAAA</div>
     <div id="myData"></div>
     <script>
         fetch('https://blooming-earth-43684.herokuapp.com/all')
