--- a/src/main/resources/templates/ratings.html
+++ b/src/main/resources/templates/ratings.html
@@ -10,7 +10,7 @@
     <div> BLAAAAAAAAAA</div>
     <div id="myData"></div>
     <script>
-        fetch('google.com')
+        fetch('http://worldtimeapi.org/api/timezone/Europe')
             .then(function (data) {
                 appendData(data);
                 console.log(data);
