--- a/src/main/resources/templates/ratings.html
+++ b/src/main/resources/templates/ratings.html
@@ -10,7 +10,7 @@
     <div> BLAAAAAAAAAA</div>
     <div id="myData"></div>
     <script>
-        fetch('https://blooming-earth-43684.herokuapp.com/all',{
+        fetch('https://blooming-earth-43684.herokuapp.com/login',{
             method: "GET"
         })
             .then(function (data) {
