--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -8,7 +8,7 @@
     <title>JSON Test</title>
 </head>
 <body>
-    <div> BLAAAAAAAAAA</div>
+
     <table>
         <tr th:each="message : ${messages}">
             <td >Name</td>
@@ -23,6 +23,7 @@
             <td th:text="${message.phone}"></td>
         </tr>
     </table>
+    <button th:onclick="/thankyou" type="button">GOOOOO</button>
 
 </body>
 </html>
