--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -23,7 +23,7 @@
             <td th:text="${message.phone}"></td>
         </tr>
     </table>
-    <button th:onclick="|windows.location.href='/thankyou'|" type="button">GOOOOO</button>
+    <button th:onclick="|window.location.href='/thankyou'|" type="button">GOOOOO</button>
 
 </body>
 </html>
