--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -24,6 +24,7 @@
         </tr>
     </table>
     <button th:onclick="|window.location.href='/thankyou'|" type="button">GOOOOO</button>
+    <button th:onclick="|window.location.href='/thankyou'|" type="button" sec:authorize="hasRole('ADMIN')">NOOOO</button>
 
 </body>
 </html>
