--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -24,7 +24,9 @@
         </tr>
     </table>
     <button th:onclick="|window.location.href='/thankyou'|" type="button">GOOOOO</button>
-    <button th:onclick="|window.location.href='/thankyou'|" type="button" sec:authorize="hasRole('ADMIN')">NOOOO</button>
-
+    
+    <div sec:authorize="hasRole('ADMIN')">
+    <button th:onclick="|window.location.href='/thankyou'|" type="button" >NOOOO</button>
+    </div>
 </body>
 </html>
