--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JSON Test</title>
-    <link rel="stylesheet" type="text/css" href="static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 </head>
 <body>
     <div class="style-test"> 
