--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="style-test"> 
-    <button>BLAA</button>    
-    <button>evbrjnbvoen;vbrjwnbjrnbvjsnrf</button>
+    <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]!</span>    
+    <button class="logout-button">Logout</button>
     </div>
 
     <table>
