--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="style-test"> 
-    <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]!</span>    
+    <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>    
     <button class="logout-button">Logout</button>
     </div>
 
