--- a/src/main/resources/public/stylesheets/style.css
+++ b/src/main/resources/public/stylesheets/style.css
@@ -1,21 +1,47 @@
-.style-test{   
-    display: flex;
+.style-test{  display: flex;
     justify-content: flex-end;
     background-color: #9575CD;
     padding: 1%;
+    align-items: center;
 }
 
-.user-name-style{
-    font-size:1.2rem;
+.user-name-style{    font-size: 1.2rem;
     font-weight: bold;
+    padding: 1%;
 }
 
-.logout-button {
-    background-color: #9954b4;
-    color: white;
-    padding: 14px 0;
+.logout-button {   
+     background-color: #FFAB91;
+    color: rgb(189, 187, 187);
+    padding: 15px;
     margin: 10px 0;
     border: none;
     cursor: grabbing;
+    border-radius: 15px;
+}
+
+.table-style {
     width: 100%;
+    display: table;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+.MuiTableContainer-root {
+    width: 100%;
+    overflow-x: auto;
+}
+
+.MuiPaper-elevation1 {
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+}
+
+.MuiPaper-rounded {
+    border-radius: 4px;
+}
+
+.MuiPaper-root {
+    color: #fff;
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    background-color: #424242;
 }
