--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -14,8 +14,9 @@
     <button class="logout-button">Logout</button>
     </div>
 
-    <table>
-        <tr th:each="message : ${messages}">
+    <div class="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded">
+    <table class="table-style">
+        <tr>
             <td >Name</td>
             <td>Age</a></td>
             <td >Email</td>
@@ -28,7 +29,11 @@
             <td th:text="${message.phone}"></td>
         </tr>
     </table>
-    <button th:onclick="|window.location.href='/thankyou'|" type="button">GOOOOO</button>
+    </div>
+    <div> 
+        <button th:onclick="|window.location.href='/thankyou'|" type="button">GOOOOO</button>
+    </div>
+    
     
     <div sec:authorize="hasRole('ADMIN')">
     <button th:onclick="|window.location.href='/thankyou'|" type="button" >NOOOO</button>
