--- a/src/main/resources/public/stylesheets/style.css
+++ b/src/main/resources/public/stylesheets/style.css
@@ -19,7 +19,10 @@
     cursor: grabbing;
     border-radius: 15px;
 }
-
+td
+{
+  height:40px;
+}
 .table-style {
     width: 100%;
     display: table;
@@ -33,7 +36,7 @@
 }
 
 .MuiPaper-elevation1 {
-    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+    box-shadow: 0px 2px 1px -1px rgba(126, 122, 122, 0.2), 0px 1px 1px 0px rgba(20, 20, 20, 0.14), 0px 1px 3px 0px rgba(80, 76, 76, 0.12);
 }
 
 .MuiPaper-rounded {
@@ -41,7 +44,7 @@
 }
 
 .MuiPaper-root {
-    color: #fff;
+    color: rgb(34, 31, 31);
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    background-color: #424242;
+    background-color: #c9c9c9;
 }
