Added more styles

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -16,8 +16,8 @@
     <div>
         <p>These are the ratings until now:</p>
     </div>
-    <div class="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded">
-    <table class="table-style">
+    <div >
+    <table class="table table-bordered">
         <tr>
             <td >Name</td>
             <td>Age</a></td>
