--- a/src/main/resources/public/stylesheets/style.css
+++ b/src/main/resources/public/stylesheets/style.css
@@ -11,18 +11,38 @@
 }
 
 .logout-button {   
-     background-color: #FFAB91;
-    color: rgb(189, 187, 187);
-    padding: 15px;
+    background-color: rgb(241, 192, 177);
+    color: rgb(39, 37, 37);
+    padding: 20px;
     margin: 10px 0;
     border: none;
     cursor: grabbing;
     border-radius: 15px;
+    font-weight: bold;
+    font-stretch: expanded;
 }
 td
 {
   height:40px;
+  width: 100%;
+  padding: 3%;
+  align-items: center;
 }
+
+.table-bordered {
+    border: 1px solid #dee2e6;
+}
+.table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
+    background-color: transparent;
+}
+.view {
+    display: block;
+    padding-top: 30px;
+}
+/*
 .table-style {
     width: 100%;
     display: table;
@@ -47,4 +67,4 @@ td
     color: rgb(34, 31, 31);
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     background-color: #c9c9c9;
-}
+}*/
