--- a/src/main/resources/public/stylesheets/style.css
+++ b/src/main/resources/public/stylesheets/style.css
@@ -50,6 +50,58 @@ label
     display: block;
     padding-top: 30px;
 }
+
+.builder .navbar-layoutit .navbar-brand {
+    color: #fff;
+    height: 36px;
+    padding: 0;
+    margin: 0 5px;
+    font-size: 24px;
+    font-style: italic;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+}
+.navbar-dark .navbar-brand {
+    color: #fff;
+}
+.navbar-brand {
+    display: inline-block;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    line-height: inherit;
+    white-space: nowrap;
+}
+
+.builder .navbar-layoutit {
+    background: #1d032d!important;
+    border: 0;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.2);
+    font-family: 'Alegreya Sans', sans-serif;
+    min-height: 48px;
+    padding: 5px;
+    justify-content: space-between;
+}
+
+.navbar-expand-lg {
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+}
+.navbar {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+}
 /*
 .table-style {
     width: 100%;
