--- a/src/main/resources/templates/feedback_results.html
+++ b/src/main/resources/templates/feedback_results.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-layoutit">
+        <div class="navbar-header">
+        <a class="navbar-brand" href="/"> ECIP - Minciu Oana-Anastasia </a>
+         
+        </div>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="top-btns ml-lg-auto">
+            <form th:action="@{/logout}" method="post">
+              <input type="submit" value="Log Out" role="button" data-toggle="modal" data-target="#layoutitModal" class="button btn-hire-inner"/>
+            </form>
+          </div>
+        </div>
+    </nav>
     <div class="style-test"> 
     <label>ECIP - Minciu Oana-Anastasia</label>
     <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>
