--- a/src/main/resources/public/stylesheets/style.css
+++ b/src/main/resources/public/stylesheets/style.css
@@ -51,7 +51,7 @@ label
     padding-top: 30px;
 }
 
-.builder .navbar-layoutit .navbar-brand {
+.navbar-layoutit .navbar-brand {
     color: #fff;
     height: 36px;
     padding: 0;
@@ -64,6 +64,9 @@ label
 .navbar-dark .navbar-brand {
     color: #fff;
 }
+.bg-dark {
+    background-color: #343a40!important;
+}
 .navbar-brand {
     display: inline-block;
     padding-top: .3125rem;
@@ -74,8 +77,8 @@ label
     white-space: nowrap;
 }
 
-.builder .navbar-layoutit {
-    background: #1d032d!important;
+.navbar-layoutit {
+    background: #1d032d;
     border: 0;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.2);
     font-family: 'Alegreya Sans', sans-serif;
