--- a/src/main/resources/templates/feedback_results.html
+++ b/src/main/resources/templates/feedback_results.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div class="top-btns ml-lg-auto">
             <form th:action="@{/logout}" method="post">
-              <input type="submit" value="Log Out" role="button" data-toggle="modal" data-target="#layoutitModal" class="button btn-hire-inner"/>
+              <input type="submit" value="Log Out"  class="button"/>
             </form>
           </div>
         </div>
