Added more styles

--- a/src/main/resources/public/stylesheets/style.css
+++ b/src/main/resources/public/stylesheets/style.css
@@ -6,9 +6,11 @@
     border-radius: 5px;
 }
 
-.user-name-style{    font-size: 1.2rem;
+.user-name-style{
+    font-size: 1.2rem;
     font-weight: bold;
     padding: 1%;
+    color: #fff;
 }
 
 .logout-button {   
@@ -104,15 +106,16 @@ label
     -ms-flex-pack: justify;
     justify-content: space-between;
     padding: .5rem 1rem;
+    border-radius: 15px;
 }
 .builder .top-btns .button.btn-hire-inner {
     background: #E91E63;
 }
 
 .builder .top-btns .button {
-    background: #6b16a1;
+    background: #5d0d8f;
     border: 0;
-    border-radius: 50px;
+    border-radius: 30px;
     color: white;
     font-family: 'Alegreya Sans', sans-serif;
     font-size: 16px;
@@ -122,9 +125,9 @@ label
 }
 
 .button {
-    background: #6b16a1;
-    border-radius: 50px;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2);
+    background: #5d0d8f;
+    border-radius: 30px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.2);
     color: #fff;
     cursor: pointer;
     display: inline-block;
