--- a/src/main/resources/templates/feedback_results.html
+++ b/src/main/resources/templates/feedback_results.html
@@ -15,6 +15,9 @@
         <a class="navbar-brand" href="/"> ECIP - Minciu Oana-Anastasia </a>
          
         </div>
+        <div >
+            <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>
+        </div>
        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div class="top-btns ml-lg-auto">
@@ -25,11 +28,7 @@
         </div>
     </nav>
     <div class="style-test"> 
-    <label>ECIP - Minciu Oana-Anastasia</label>
-    <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>
-    <form th:action="@{/logout}" method="post">
-        <button class="logout-button" >Logout</button>
-    </form>
+        <label></label>
     </div>
     <div>
         <p>These are the feedback results until now:</p>
