--- a/src/main/resources/templates/feedback_results.html
+++ b/src/main/resources/templates/feedback_results.html
@@ -15,6 +15,7 @@
         <a class="navbar-brand" href="/"> ECIP - Minciu Oana-Anastasia </a>
          
         </div>
+        <div class="hidden-dark-font"><label>blaaaaa</label</div>
         <div >
             <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>
         </div>
@@ -27,7 +28,7 @@
           </div>
         </div>
     </nav>
-    <div class="style-test"> 
+    <div > 
         <label></label>
     </div>
     <div>
