--- a/src/main/resources/templates/feedback_results.html
+++ b/src/main/resources/templates/feedback_results.html
@@ -18,7 +18,7 @@
             <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>
         </div>
 
-        <div class="top-btns ml-lg-auto">
+        <div class="top-btns ml-lg-auto button">
         <form th:action="@{/logout}" method="post">
             <input type="submit" value="Log Out"  class="button"/>
         </form>
