--- a/src/main/resources/templates/feedback_results.html
+++ b/src/main/resources/templates/feedback_results.html
@@ -10,21 +10,16 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-layoutit">
-        <div class="navbar-header">
-        <a class="navbar-brand" href="/"> ECIP - Minciu Oana-Anastasia </a>
-        </div>
-        <div >
-            <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>
-        </div>
+    <div class="style-test">
+        <a class="user-name-style" href="/"> ECIP - Minciu Oana-Anastasia </a>
 
-        <div class="top-btns ml-lg-auto button">
+        <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>
+
         <form th:action="@{/logout}" method="post">
             <input type="submit" value="Log Out"  class="button"/>
         </form>
-        </div>
+    </div>
 
-    </nav>
     <div > 
         <label></label>
     </div>
