--- a/src/main/resources/templates/feedback_results.html
+++ b/src/main/resources/templates/feedback_results.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JSON Test</title>
+    <title>Course Feedback Results</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 </head>
 <body>
 
     <div class="style-test">
-        <a class="user-name-style" href="/"> ECIP - Minciu Oana-Anastasia </a>
+        <a class="brand" href="/"> ECIP - Minciu Oana-Anastasia </a>
 
         <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>
 
@@ -26,6 +26,7 @@
     <div>
         <p>These are the feedback results until now:</p>
     </div>
+    
     <div class="view">
     <table class="table table-bordered">
         <tr>
