--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -16,7 +16,7 @@
     <div>
         <p>These are the ratings until now:</p>
     </div>
-    <div >
+    <div class="view">
     <table class="table table-bordered">
         <tr>
             <td >Name</td>
