--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,13 +19,13 @@
             <input type="submit" value="Log Out"  class="button"/>
         </form>
     </div>
-    <div class="logout-button"> 
-        <button th:onclick="|window.location.href='/coursefeedback'|" type="button">Give Course Feedback</button>
+    <div sec:authorize="hasRole('USER')"> 
+        <button class="logout-button" th:onclick="|window.location.href='/coursefeedback'|" type="button">Give Course Feedback</button>
     </div>
     
     
-    <div class="logout-button" sec:authorize="hasRole('ADMIN')">
-    <button th:onclick="|window.location.href='/feedbackresults'|" type="button" >See Feedback Results</button>
+    <div  sec:authorize="hasRole('ADMIN')">
+    <button class="logout-button" th:onclick="|window.location.href='/feedbackresults'|" type="button" >See Feedback Results</button>
     </div>
 
 </body>
