--- a/src/main/resources/templates/course_feedback.html
+++ b/src/main/resources/templates/course_feedback.html
@@ -124,7 +124,7 @@
 
         <span class="user-name-style">[[${#httpServletRequest.remoteUser}]]</span>
 
-        <form th:action="@{/logout}" method="post">
+        <form th:action="@{/logout}" method="post"  class="user-name-style">
             <input type="submit" value="Log Out"  class="button"/>
         </form>
     </div>
